--- a/index.html
+++ b/index.html
@@ -3,231 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instant Lawn Quote</title>
-  <meta name="theme-color" content="#343434">
+  <title>Instant Lawn Quote - TampaLawnPro</title>
+  <meta name="theme-color" content="#1a8f4d">
   <style>
     body {
       font-family: sans-serif;
-      background: #1a8f4d;
+      background: #f0f5f0;
       margin: 0;
-      padding: 20px;
+      padding: 0;
     }
 
-    .lookup-box {
-      background: #2b2b2b;
-      color: white;
-      border-radius: 10px;
-      padding: 20px;
-      max-width: 500px;
+    .container {
+      max-width: 900px;
       margin: 0 auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      padding: 40px 20px;
+      text-align: center;
     }
 
-    .lookup-input, .lookup-button {
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      padding: 12px;
+    h1 {
+      color: #1a8f4d;
+      font-size: 2em;
       margin-bottom: 10px;
-      width: 100%;
     }
 
-    .lookup-input {
+    p.subtitle {
+      font-size: 1.2em;
+      margin-bottom: 30px;
       color: #333;
     }
 
-    .lookup-button {
-      background-color: #f4b400;
-      color: #000;
-      cursor: pointer;
+    iframe {
+      width: 100%;
+      max-width: 800px;
+      height: 450px;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    .cta {
+      margin-top: 30px;
+      font-size: 1.1em;
+    }
+
+    .cta a {
+      color: #1a8f4d;
+      text-decoration: none;
       font-weight: bold;
     }
 
-    #map {
-      width: 100%;
-      height: 400px;
-      border-radius: 10px;
-      margin-top: 20px;
-      display: none;
-    }
-
-    #result {
-      margin-top: 20px;
-      background: white;
-      color: black;
-      padding: 15px;
-      border-radius: 10px;
-    }
-
-    #tutorialOverlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.9);
-      color: white;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      padding: 20px;
-      text-align: center;
-      flex-direction: column;
+    .cta a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <div class="lookup-box">
-    <h2>Instant Lawn Quote</h2>
 
-    <input 
-      type="search" 
-      id="addressInput" 
-      class="lookup-input" 
-      placeholder="1234 Main Street, City, State" 
-      required 
-      autocomplete="off" 
-    />
+  <div class="container">
+    <h1>The Fastest Way to Quote & Book Lawn Care</h1>
+    <p class="subtitle">Try it now on TampaLawnPro.com</p>
 
-    <button onclick="findPlace()" class="lookup-button">Find and Draw →</button>
-
-    <div id="result"></div>
-    <div id="map"></div>
-  </div>
-
-  <!-- 📘 Tutorial Overlay (VISUAL STEPS + Video) -->
-  <div id="tutorialOverlay">
-    <h2 style="margin-bottom: 20px;">🎯 How to Get Your Instant Lawn Quote</h2>
-
-    <iframe width="100%" height="315"
-      src="https://www.youtube.com/embed/cNzmciDoQtk?autoplay=1&mute=1&rel=0"
-      title="How to Draw Your Lawn Area"
-      frameborder="0"
+    <iframe
+      src="https://www.youtube.com/embed/hQoLyGRjtwU?autoplay=1&mute=1&rel=0"
+      title="TampaLawnPro Tutorial Video"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-      style="border-radius: 10px; max-width: 560px;">
+      allowfullscreen>
     </iframe>
 
-    <button onclick="hideTutorial()" style="margin-top: 30px; padding: 12px 20px; font-size: 16px; border-radius: 6px; background: #f4b400; color: black; border: none; font-weight: bold;">
-      Got it — Don’t show this again →
-    </button>
+    <p class="cta">
+      🚀 Get your instant quote today at <a href="https://TampaLawnPro.com" target="_blank">TampaLawnPro.com</a>
+    </p>
   </div>
 
-  <script>
-    let map, drawingManager, selectedPlaceId = null;
-
-    function initAutocomplete() {
-      const input = document.getElementById("addressInput");
-      const autocomplete = new google.maps.places.Autocomplete(input, {
-        types: ['address'],
-        componentRestrictions: { country: "us" }
-      });
-
-      autocomplete.addListener("place_changed", () => {
-        const place = autocomplete.getPlace();
-        if (place.place_id) {
-          selectedPlaceId = place.place_id;
-        }
-      });
-    }
-
-    function findPlace() {
-      const input = document.getElementById("addressInput").value.trim();
-      if (!selectedPlaceId && !input) {
-        document.getElementById("result").innerHTML = "❌ Please select a valid address.";
-        return;
-      }
-
-      const geocoder = new google.maps.Geocoder();
-      const request = selectedPlaceId ? { placeId: selectedPlaceId } : { address: input };
-
-      geocoder.geocode(request, (results, status) => {
-        if (status === "OK" && results[0]) {
-          const location = results[0].geometry.location;
-          document.getElementById("map").style.display = "block";
-
-          map = new google.maps.Map(document.getElementById("map"), {
-            center: location,
-            zoom: 18,
-            mapTypeId: 'hybrid'
-          });
-
-          initDrawingManager();
-          showTutorial();
-
-          document.getElementById("result").innerHTML = `
-            📍 <strong>Address:</strong> ${results[0].formatted_address}<br><br>
-            ✅ <strong>Instructions:</strong> Use the polygon tool above the map to draw your lawn and get a quote.
-          `;
-        } else {
-          document.getElementById("result").innerHTML = "❌ Geocoding failed. Try a different address.";
-        }
-      });
-    }
-
-    function initDrawingManager() {
-      if (drawingManager) {
-        drawingManager.setMap(null);
-      }
-
-      drawingManager = new google.maps.drawing.DrawingManager({
-        drawingMode: null,
-        drawingControl: true,
-        drawingControlOptions: {
-          position: google.maps.ControlPosition.TOP_CENTER,
-          drawingModes: ['polygon']
-        }
-      });
-
-      drawingManager.setMap(map);
-
-      google.maps.event.addListener(drawingManager, 'overlaycomplete', function (event) {
-        const polygon = event.overlay;
-        const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
-        const areaSqFt = areaMeters * 10.7639;
-
-        const basePrice = 40;
-        const ratePerSqFt = 0.005;
-        const totalPrice = basePrice + areaSqFt * ratePerSqFt;
-
-        document.getElementById("result").innerHTML += `
-          <div style="background: #fff9e6; padding: 12px; border-radius: 8px; border: 1px solid #f4b400; margin-top: 15px;">
-            🧱 <strong>Lawn Size:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
-            💵 <strong>Your Price:</strong> <span style="font-size: 18px; color: #27ae60;">$${totalPrice.toFixed(2)}</span><br><br>
-            <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')"
-                    style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
-              ✅ Book This Lawn Service →
-            </button>
-          </div>
-        `;
-      });
-    }
-
-    function showTutorial() {
-      try {
-        const skipped = localStorage.getItem("tutorialDismissed");
-        if (!skipped || skipped !== "yes") {
-          document.getElementById("tutorialOverlay").style.display = "flex";
-        }
-      } catch (e) {
-        console.warn("Unable to access localStorage.", e);
-      }
-    }
-
-    function hideTutorial() {
-      try {
-        localStorage.setItem("tutorialDismissed", "yes");
-        document.getElementById("tutorialOverlay").style.display = "none";
-      } catch (e) {
-        console.warn("Unable to access localStorage.", e);
-        document.getElementById("tutorialOverlay").style.display = "none";
-      }
-    }
-  </script>
-
-  <!-- ✅ Load Google Maps API with drawing tools -->
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initAutocomplete">
-  </script>
 </body>
 </html>
