--- a/index.html
+++ b/index.html
@@ -43,36 +43,12 @@
       font-weight: bold;
     }
 
-    #map {
-      width: 100%;
-      height: 400px;
-      border-radius: 10px;
-      margin-top: 20px;
-      display: none;
-    }
-
     #result {
       margin-top: 20px;
       background: white;
       color: black;
       padding: 15px;
       border-radius: 10px;
-    }
-
-    #tutorialOverlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.9);
-      color: white;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      padding: 20px;
-      text-align: center;
-      flex-direction: column;
     }
   </style>
 </head>
@@ -89,145 +65,22 @@
       autocomplete="off" 
     />
 
-    <button onclick="findPlace()" class="lookup-button">Find and Draw →</button>
+    <button onclick="openQuoteWindow()" class="lookup-button">Find and Draw →</button>
 
     <div id="result"></div>
-    <div id="map"></div>
-  </div>
-
-  <!-- 📘 Tutorial Overlay (VISUAL STEPS + Video) -->
-  <div id="tutorialOverlay">
-    <h2 style="margin-bottom: 20px;">🎯 How to Get Your Instant Lawn Quote</h2>
-
-    <iframe width="100%" height="315"
-      src="https://www.youtube.com/embed/cNzmciDoQtk?autoplay=1&mute=1&rel=0"
-      title="How to Draw Your Lawn Area"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-      style="border-radius: 10px; max-width: 560px;">
-    </iframe>
-
-    <button onclick="hideTutorial()" style="margin-top: 30px; padding: 12px 20px; font-size: 16px; border-radius: 6px; background: #f4b400; color: black; border: none; font-weight: bold;">
-      Got it — Don’t show this again →
-    </button>
   </div>
 
   <script>
-    let map, drawingManager, selectedPlaceId = null;
-
-    function initAutocomplete() {
-      const input = document.getElementById("addressInput");
-      const autocomplete = new google.maps.places.Autocomplete(input, {
-        types: ['address'],
-        componentRestrictions: { country: "us" }
-      });
-
-      autocomplete.addListener("place_changed", () => {
-        const place = autocomplete.getPlace();
-        if (place.place_id) {
-          selectedPlaceId = place.place_id;
-        }
-      });
-    }
-
-    function findPlace() {
-      const input = document.getElementById("addressInput").value.trim();
-      if (!selectedPlaceId && !input) {
-        document.getElementById("result").innerHTML = "❌ Please select a valid address.";
+    function openQuoteWindow() {
+      const address = document.getElementById("addressInput").value.trim();
+      if (!address) {
+        alert("❌ Please enter a valid address.");
         return;
       }
 
-      const geocoder = new google.maps.Geocoder();
-      const request = selectedPlaceId ? { placeId: selectedPlaceId } : { address: input };
-
-      geocoder.geocode(request, (results, status) => {
-        if (status === "OK" && results[0]) {
-          const location = results[0].geometry.location;
-          document.getElementById("map").style.display = "block";
-
-          map = new google.maps.Map(document.getElementById("map"), {
-            center: location,
-            zoom: 18,
-            mapTypeId: 'hybrid'
-          });
-
-          initDrawingManager();
-          showTutorial();
-
-          document.getElementById("result").innerHTML = `
-            📍 <strong>Address:</strong> ${results[0].formatted_address}<br><br>
-            ✅ <strong>Instructions:</strong> Use the polygon tool above the map to draw your lawn and get a quote.
-          `;
-        } else {
-          document.getElementById("result").innerHTML = "❌ Geocoding failed. Try a different address.";
-        }
-      });
+      const encoded = encodeURIComponent(address);
+      window.open(`quote.html?address=${encoded}`, '_blank');
     }
-
-    function initDrawingManager() {
-      if (drawingManager) {
-        drawingManager.setMap(null);
-      }
-
-      drawingManager = new google.maps.drawing.DrawingManager({
-        drawingMode: null,
-        drawingControl: true,
-        drawingControlOptions: {
-          position: google.maps.ControlPosition.TOP_CENTER,
-          drawingModes: ['polygon']
-        }
-      });
-
-      drawingManager.setMap(map);
-
-      google.maps.event.addListener(drawingManager, 'overlaycomplete', function (event) {
-        const polygon = event.overlay;
-        const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
-        const areaSqFt = areaMeters * 10.7639;
-
-        const basePrice = 40;
-        const ratePerSqFt = 0.005;
-        const totalPrice = basePrice + areaSqFt * ratePerSqFt;
-
-        document.getElementById("result").innerHTML += `
-          <div style="background: #fff9e6; padding: 12px; border-radius: 8px; border: 1px solid #f4b400; margin-top: 15px;">
-            🧱 <strong>Lawn Size:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
-            💵 <strong>Your Price:</strong> <span style="font-size: 18px; color: #27ae60;">$${totalPrice.toFixed(2)}</span><br><br>
-            <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')"
-                    style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
-              ✅ Book This Lawn Service →
-            </button>
-          </div>
-        `;
-      });
-    }
-
-    function showTutorial() {
-      try {
-        const skipped = localStorage.getItem("tutorialDismissed");
-        if (!skipped || skipped !== "yes") {
-          document.getElementById("tutorialOverlay").style.display = "flex";
-        }
-      } catch (e) {
-        console.warn("Unable to access localStorage.", e);
-      }
-    }
-
-    function hideTutorial() {
-      try {
-        localStorage.setItem("tutorialDismissed", "yes");
-        document.getElementById("tutorialOverlay").style.display = "none";
-      } catch (e) {
-        console.warn("Unable to access localStorage.", e);
-        document.getElementById("tutorialOverlay").style.display = "none";
-      }
-    }
-  </script>
-
-  <!-- ✅ Load Google Maps API with drawing tools -->
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initAutocomplete">
   </script>
 </body>
 </html>
