--- a/index.html
+++ b/index.html
@@ -3,105 +3,134 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instant Lawn Quote</title>
-  <meta name="theme-color" content="#343434">
+  <title>Quote & Map</title>
   <style>
     body {
       font-family: sans-serif;
-      background: #1a8f4d;
       margin: 0;
       padding: 20px;
+      background: #064d2e; /* Dark green */
     }
 
-    .lookup-box {
-      background: #2b2b2b;
-      color: white;
-      border-radius: 10px;
-      padding: 20px;
-      max-width: 500px;
-      margin: 0 auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-
-    .lookup-input, .lookup-button {
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      padding: 12px;
+    .logo-container {
+      text-align: center;
       margin-bottom: 10px;
-      width: 100%;
     }
 
-    .lookup-input {
-      color: #333;
+    .logo-container img {
+      max-width: 180px;
+      height: auto;
     }
 
-    .lookup-button {
-      background-color: #f4b400;
-      color: #000;
-      cursor: pointer;
+    h2 {
+      color: white;
       font-weight: bold;
+      text-align: center;
+      margin-top: 0;
+    }
+
+    #map {
+      width: 100%;
+      height: 500px;
+      border-radius: 10px;
+      margin-top: 20px;
     }
 
     #result {
       margin-top: 20px;
       background: white;
-      color: black;
       padding: 15px;
       border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+
+    button {
+      background: #f4b400;
+      color: black;
+      padding: 10px 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="lookup-box">
-    <h2>Instant Lawn Quote</h2>
 
-    <input 
-      type="search" 
-      id="addressInput" 
-      class="lookup-input" 
-      placeholder="1234 Main Street, City, State" 
-      required 
-      autocomplete="off" 
-    />
-
-    <button onclick="openQuoteWindow()" class="lookup-button">Find and Draw →</button>
-
-    <div id="result"></div>
+  <!-- Logo and Title -->
+  <div class="logo-container">
+    <img src="https://assets.cdn.filesafe.space/SEMmeWOBlogS8eeis0N9/media/6844cd5419da186fffc012b0.png" alt="Logo" />
   </div>
+  <h2>Interactive Lawn Quote</h2>
+
+  <!-- Map and Quote Result -->
+  <div id="map"></div>
+  <div id="result">🧭 Loading map...</div>
 
   <script>
-    let selectedPlaceId = null;
+    let map, drawingManager;
 
-    function openQuoteWindow() {
-      const input = document.getElementById("addressInput").value.trim();
-      if (!input) {
-        alert("❌ Please enter a valid address.");
-        return;
-      }
-      const encoded = encodeURIComponent(input);
-      window.open(`quote.html?address=${encoded}`, '_blank');
+    function getQueryParam(key) {
+      const params = new URLSearchParams(window.location.search);
+      return params.get(key) || "";
     }
 
-    function initAutocomplete() {
-      const input = document.getElementById("addressInput");
-      const autocomplete = new google.maps.places.Autocomplete(input, {
-        types: ['address'],
-        componentRestrictions: { country: "us" }
-      });
+    function initMap() {
+      const address = getQueryParam("address");
+      if (!address) {
+        document.getElementById("result").innerText = "❌ Address not found.";
+        return;
+      }
 
-      autocomplete.addListener("place_changed", () => {
-        const place = autocomplete.getPlace();
-        if (place.place_id) {
-          selectedPlaceId = place.place_id;
+      const geocoder = new google.maps.Geocoder();
+      geocoder.geocode({ address }, (results, status) => {
+        if (status === "OK" && results[0]) {
+          const location = results[0].geometry.location;
+          map = new google.maps.Map(document.getElementById("map"), {
+            center: location,
+            zoom: 18,
+            mapTypeId: 'hybrid'
+          });
+
+          drawingManager = new google.maps.drawing.DrawingManager({
+            drawingMode: null,
+            drawingControl: true,
+            drawingControlOptions: {
+              position: google.maps.ControlPosition.TOP_CENTER,
+              drawingModes: ['polygon']
+            }
+          });
+          drawingManager.setMap(map);
+
+          google.maps.event.addListener(drawingManager, 'overlaycomplete', function (event) {
+            const polygon = event.overlay;
+            const areaMeters = google.maps.geometry.spherical.computeArea(polygon.getPath());
+            const areaSqFt = areaMeters * 10.7639;
+
+            const basePrice = 40;
+            const ratePerSqFt = 0.005;
+            const totalPrice = basePrice + areaSqFt * ratePerSqFt;
+
+            document.getElementById("result").innerHTML = `
+              <strong>📍 Address:</strong> ${results[0].formatted_address}<br>
+              <strong>🧱 Lawn Size:</strong> ${areaSqFt.toFixed(2)} sq ft<br>
+              <strong>💵 Estimated Price:</strong> $${totalPrice.toFixed(2)}<br><br>
+              <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')">
+                ✅ Book This Lawn Service
+              </button>
+            `;
+          });
+
+          document.getElementById("result").innerHTML = "✅ Use the polygon tool to draw your lawn.";
+        } else {
+          document.getElementById("result").innerText = "❌ Geocoding failed.";
         }
       });
     }
   </script>
 
-  <!-- ✅ Load Google Maps Places API for Autocomplete -->
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places,geometry,drawing&callback=initMap">
   </script>
 </body>
 </html>
